# bareasgi-auth-server

./: .gitignore  .prettierrc.json  .pylintrc  README.md  auth.db  punch_config.py  pyproject.toml
bareasgi_auth_server/: __init__.py  app.py  auth_controller.py  auth_service.py  authentication_controller.py  config.yml  server.py  types.py  utils.py
bareasgi_auth_server/auth_provider/: __init__.py  memory_auth_provider.py  postgres_auth_provider.py  types.py
bareasgi_auth_server/auth_repository/: authorization_repository.py  sqlite_auth_repository.py  sqlite_authentication_repository.py  sqlite_authorization_repository.py
bareasgi_auth_server/authentication_service/: __init__.py  authentication_service.py  ldap_authentication_service.py  repository_authentication_service.py
bareasgi_auth_server/templates/: base.html  login.html  register.html
demos/: README.md  example_api_server.py  example_auth_server.py
demos/example-auth-aui/: package-lock.json  package.json
demos/example-auth-aui/src/: index.js
demos/example-auth-aui/src/components/: SignIn.js
demos/example-auth-ui/: .env.development  README.md  package-lock.json  package.json
demos/example-auth-ui/src/: App.js
demos/example-client-ui-dashboard/: .env.development  .env.production  package.json
demos/example-client-ui-dashboard/public/: index.html
demos/example-client-ui-dashboard/src/: App.js  Site.js
demos/example-client-ui-simple/: README.md  package-lock.json  package.json
demos/example-client-ui-simple/src/: App.js  Site.js
demos/example-dashboard/: README.md  package-lock.json  package.json
demos/example-dashboard/src/: App.js  AuthenticatedApp.js  AuthenticatingApp.js  Site.js
demos/example-test-ui/: README.md  package-lock.json  package.json
demos/example-test-ui/src/: App.js  AuthenticatedApp.js  Site.js  index.js
examples/: scratch_sqlite.py
src/bareasgi_auth_server/: __init__.py  app.py  auth_controller.py  auth_service.py  authentication_controller.py  command.py  config.yml  server.py
src/bareasgi_auth_server/auth_provider/: __init__.py  auth_provider.py  sqlite_auth_provider.py
src/bareasgi_auth_server/auth_repository/: __init__.py  auth_repository.py  authorization_repository.py
src/bareasgi_auth_server/authentication_repository/: __init__.py  authentication_repository.py  password.py  sqlite_authentication_repository.py
src/bareasgi_auth_server/authentication_service/: authentication_service.py  ldap_authentication_service.py  repository_authentication_service.py
src/bareasgi_auth_server/entrypoint/: startup.py
tests/: test_bareasgi_auth_server.py
(+15 files in other folders)
