[tool.poetry]
name = "bareASGI-auth-server"
version = "1.0.0"
description = "Authentication server for bareASGI"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_auth_server", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
bareasgi = "^3.0"
bareasgi-jinja2 = "^3.0"
bareasgi-auth-common = "^1.0"
bareasgi-cors = "^3.0"
easydict = "^1.9"
PyYaml = "^5.1"
sqlalchemy = {version = "^1.3", optional = true}
aiopg = {version = "^0.16.0", optional = true}
aiosqlite = "^0.10.0"
uvicorn = "^0.8.6"
hypercorn = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.4"

[tool.poetry.extras]
postgres = [ "aiopg", "sqlalchemy" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
