[tool.poetry]
name = "bareASGI-auth-server"
version = "1.0.0"
description = "Authentication server for bareASGI"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_auth_server" },
]

[tool.poetry.dependencies]
python = "^3.7"
bareasgi = "^3.7"
# bareasgi-auth-common = "^2.0"
bareasgi-cors = "^3.1"
PyYaml = "^5.4"
sqlalchemy = {version = "^1.3", optional = true}
aiopg = {version = "^0.16.0", optional = true}
aiosqlite = "^0.10.0"
hypercorn = "^0.11"
bonsai = {version = "^1.2", optional = true}
bareclient = "^4.6"
PyJWT = "^1.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
mypy = "^0.910"
pytest = "^3.8"
pylint = "^2.9"

[tool.poetry.extras]
postgres = [ "aiopg", "sqlalchemy" ]
ldap = [ "bonsai" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
